--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,9 @@
-<div id="footer" class="contain-to-grid" style="height: 100px; background-color: white; color:black; text-align:center; border-top: 1px solid #dcdcdc;">
-	<div class="row" style="display:inline-block;margin-top:20px;">
+<div id="footer" class="contain-to-grid">
+	<div class="row" id="social-icons">
 		<a href="#"><i class="fa fa-twitter fa-2x"></i></a>
 		<a href="#"><i class="fa fa-facebook fa-2x"></i></a>
 		<a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
+		<a href="#"><i class="fa fa-instagram fa-2x"></i></a>
 	</div>
-	<p>&copy; TripleB 2015</p>
+	<p id="copyright">&copy; TripleB 2015</p>
 </div>
