--- a/app/views/welcome/_home.html.erb
+++ b/app/views/welcome/_home.html.erb
@@ -4,10 +4,8 @@
       <!-- <div class="row"> -->
         <!-- <div class='small-12 columns'> -->
           <div id='sign-up-form'>
-            <span>
-              <%= f.text_field :first_name, placeholder: "First Name" %>
-              <%= f.text_field :last_name, placeholder: "Last Name" %>
-            </span>
+            <%= f.text_field :first_name, placeholder: "First Name" %>
+            <%= f.text_field :last_name, placeholder: "Last Name" %>
             <%= f.text_field :email, placeholder: "Email" %>
             <%= f.text_field :phone, placeholder: "Phone Number" %>
             <%= f.password_field :password, placeholder: "Password" %>
@@ -21,12 +19,11 @@
   </div>
 </section>
 <section style="text-align: center; margin: 75px auto 55px auto;">
-  <!-- <h3>How it Works</h3> -->
   <div class="row" id="tester">
     <div class="medium-4 columns">
       <i class="fa fa-warning fa-5x"></i>
       <h3>Have an issue?</h3>
-      <p>Is it a flat tire or maybe it's something else? Easily create an alert detailing the issue with your bicycle.</p>
+      <p>Easily create an alert detailing the issue with your bicycle.</p>
     </div>
     <div class="medium-4 columns">
       <i class="fa fa-gears fa-5x" style="color:#00aac8;"></i>
