--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="contain-to-grid sticky" id="header">
+<div class="contain-to-grid sticky">
   <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
     <ul class="title-area">
       <li class="name">
@@ -13,11 +13,11 @@
     <section class="top-bar-section">
       <ul class="right">
       <% if signed_in? %>
-        <li><%= link_to current_user.username, user_path(id: current_user.id) %></li>
-        <li><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
+        <li class="active"><%= link_to current_user.username, user_path(id: current_user.id) %></li>
+        <li class="active"><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
       <% else %>
-        <li><%= link_to "Sign Up", signup_path %></li>
-        <li><%= link_to "Sign In", login_path %></li>
+        <li class="active"><%= link_to "Login", login_path %></li>
+        <li class="active"><%= link_to "Sign up", signup_path %></li>
       <% end %>
     </ul>
 
